k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
spec:
  replicas: 2

  selector:
    matchLabels:
      app: profile-service

  template:
    metadata:
      labels:
        app: profile-service

    spec:
      containers:
        - name: profile-service
          image: test2:latest
          imagePullPolicy: Never

          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"

            limits:
              memory: "1Gi"
              cpu: "1000m"

          ports:
            - name: app
              containerPort: 8080

            - name: agent
              containerPort: 9911
